# dbus

./: .gitlab-ci.yml  .travis.yml  AUTHORS  CMakeLists.txt  Doxyfile.in  NEWS  README-lttng.md  README.cmake  README.md  configure.ac  meson.build
LICENSES/: LicenseRef-unknown.txt
bus/: activation-helper.c  activation.c  activation.h  audit.c  bus.c  bus.h  config-loader-expat.c  config-parser-common.c  config-parser-common.h  config-parser-trivial.c  config-parser-trivial.h  config-parser.c  config-parser.h  connection.c  connection.h  containers.c  containers.h  dir-watch-inotify.c  dir-watch-kqueue.c  dispatch.c  dispatch.h  driver.c  driver.h  main.c  org.freedesktop.dbus-session.plist.in  policy.c  policy.h  selinux.c  selinux.h  services.c  services.h  session.conf.in  signals.c  stats.c  system.conf.in  test.c  test.h
cmake/: ConfigureChecks.cmake  config.h.cmake
dbus/: CMakeLists.txt  Makefile.am  dbus-backtrace-win.c  dbus-connection-internal.h  dbus-connection.c  dbus-file-util.c  dbus-file.h  dbus-internals.c  dbus-internals.h  dbus-keyring.c  dbus-lttng-verbose.tp  dbus-marshal-header.c  dbus-message.c  dbus-message.h  dbus-pending-call.c  dbus-protocol.h  dbus-server-protected.h  dbus-server-socket.c  dbus-server-socket.h  dbus-server-unix.c  dbus-server-win.c  dbus-shared.h  dbus-spawn-unix.c  dbus-spawn.c  dbus-string.c  dbus-string.h  dbus-sysdeps-unix.c  dbus-sysdeps-unix.h  dbus-sysdeps-util-unix.c  dbus-sysdeps-util-win.c  dbus-sysdeps-win.c  dbus-sysdeps.c  dbus-sysdeps.h  dbus-threads.c  meson.build  (+4 more)
test/client-package/: CMakeLists.txt  test.c
(+61 files in other folders)
